Mon Feb  9 22:10:58 1998  Todd Vierling <tv@pobox.com>

	* fixincludes: Tweak fix for struct exception in math.h

Mon Feb  9 01:15:08 1998  Mark Mitchell  <mmitchell@usa.net>

        * integrate.c (get_label_from_map): New function.
        (expand_inline_function): Use it.  Initialize the label_map to
        NULL_RTX instead of gen_label_rtx.
        (copy_rtx_and_substitute): Use get_label_from_map.
        * integrate.h (get_label_from_map): New function.
        (set_label_from_map): New macro.
        * unroll.c (unroll_loop): Use them.
        (copy_loop_body): Ditto.

        * toplev.c (rest_of_compilation): Don't call save_for_inline_copy
        if all we're doing is dealing with -Wreturn-type.

Mon Feb  9 01:07:41 1998  Jeffrey A Law  (law@cygnus.com)

        * i386/x-sco5 (CC): Remove trailing whitespace.

Mon Feb  9 01:07:37 1998  J. Kean Johnston  <jkj@sco.com>

	* i386/sco5.h (STARTFILE_SPEC, ENDFILE_SPEC): Correctly handle
	"-static".

Mon Feb  9 00:02:53 1998  Jim Wilson  <wilson@cygnus.com>

	* function.c (assign_parms): New variable named_arg, with value
	depending on STRICT_ARGUMENT_NAMING.  Use instead of ! last_named.

Mon Feb  9 00:01:00 1998  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* stmt.c (pushcase_range): Clean up handling of "infinite" values.

	* loop.c (strength_reduce): When placing increment for auto-inc
	case, do comparison in loop order.

Fri Jan  2 23:40:09 1998  Jim Wilson  (wilson@cygnus.com)
			  Jeffrey A Law  (law@cygnus.com)

	* crtstuff.c (__frame_dummy): New function for irix6.
	(__do_global_ctors): Call __frame_dummy for irix6.
	* iris6.h (LINK_SPEC): Hide __frame_dummy too.
	 
Wed Dec 24 23:03:42 1997  Jim Wilson  (wilson@cygnus.com)

	* mips.c (mips_expand_epilogue): Emit blockage insn before call to
	save_restore_insns if no FP and GP will be restored.

	* abi64.h (LONG_MAX_SPEC): Check MIPS_ABI_DEFAULT and TARGET_DEFAULT,
	and define __LONG_MAX__ appropriately.  Add support for -mabi=X,